# agent-browser-firefox

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  agent-browser-firefox.example.json  install.sh
docs/: README.md  flow.html
src/: actions.rs  chat.rs  config.rs  daemon.rs  firefox.rs  install.rs  instance.rs  ipc.rs  main.rs  output.rs
src/bidi/: client.rs  mod.rs  session.rs
