[package]
name = "agent-browser-firefox"
version = "0.1.0"
edition = "2021"
description = "Firefox browser automation CLI for AI agents (WebDriver BiDi). A Firefox-native counterpart to agent-browser's Chrome/CDP attachment."
license = "MIT OR Apache-2.0"

[[bin]]
name = "agent-browser-firefox"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
